# Flask-Metakam

./: README.md  config.py  pyproject.toml
app/: __init__.py  admin.py
app/controllers/: brand_controller.py  manufacturer_controller.py  user_controller.py
app/forms/: brand_form.py  manufacturer_form.py
app/models/: brand.py  manufacturer.py  user.py
app/routes/: admin_client.py  auth.py  brand_api.py  manufacturer_api.py
app/static/css/: styles.css
app/templates/: base.html  login.html
app/templates/brand/: add.html  edit.html  list.html
app/templates/manufacturer/: add.html  edit.html  list.html
migrations/versions/: 9f7580f382ef_initial_migration_with_brand_and_.py  e61190ff318b_add_user_model.py
