[tool.poetry]
name = "flask-metakam"
version = "0.1.0"
description = "Flask web application"
authors = ["k4rimdev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
wtforms = "^3.1.2"
flask-migrate = "^4.0.7"
flask-admin = "^1.6.1"
flask-login = "^0.6.3"
werkzeug = "^3.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
